--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -2,10 +2,8 @@
 #
 # Repository: https://github.com/BIC-MNI/minc-toolkit-v2
 #
-# Binaries are compiled in a CentOS 6.9 Docker container, based on this
-# Dockerfile:
-# https://github.com/BIC-MNI/build_packages/blob/master/build_centos_6.9_x64/Dockerfile
 # Instructions: http://bic-mni.github.io/#on-debianubuntu
+# The Debian packages are unpacked for yum based distributions as well
 
 name: minc
 binaries:
