--- a/neurodocker/templates/ants.yaml
+++ b/neurodocker/templates/ants.yaml
@@ -9,6 +9,8 @@ binaries:
       install_path: /opt/ants-{{ self.version }}
   urls:
     # Official binaries are provided as of 2.4.1 (https://github.com/ANTsX/ANTs/releases)
+    "2.4.3": https://github.com/ANTsX/ANTs/releases/download/v2.4.3/ants-2.4.3-centos7-X64-gcc.zip
+    "2.4.2": https://github.com/ANTsX/ANTs/releases/download/v2.4.2/ants-2.4.2-centos7-X64-gcc.zip   
     "2.4.1": https://github.com/ANTsX/ANTs/releases/download/v2.4.1/ants-2.4.1-centos7-X64-gcc.zip
     # Binaries prior to 2.4.x were compiled by Jakub Kaczmarzyk (https://github.com/kaczmarj)
     "2.3.4": https://dl.dropbox.com/s/gwf51ykkk5bifyj/ants-Linux-centos6_x86_64-v2.3.4.tar.gz
@@ -33,7 +35,7 @@ binaries:
   instructions: |
     {{ self.install_dependencies() }}
     echo "Downloading ANTs ..."
-    {% if self.version == "2.4.1" -%}
+    {% if (self.version == "2.4.1" or self.version == "2.4.2" or self.version == "2.4.3") -%}
     curl -fsSL -o ants.zip {{ self.urls[self.version] }}
     unzip ants.zip -d /opt
     mv {{ self.install_path }}/bin/* {{ self.install_path }}
