--- a/setup.cfg
+++ b/setup.cfg
@@ -50,8 +50,8 @@ dev =
     pytest-reportlog >= 0.1.2
     pytest-xdist >= 2.2.0
 docs =
-    sphinx >= 3.4, !=6.*
-    pydata-sphinx-theme
+    sphinx <7
+    pydata-sphinx-theme >= 0.13
     sphinxcontrib.apidoc >= 0.3
 all =
     %(minify)s
