--- a/neurodocker/templates/cat12.yaml
+++ b/neurodocker/templates/cat12.yaml
@@ -39,6 +39,6 @@ binaries:
     mkdir -p {{ self.install_path }}
     mv /tmp/*{{ self.version }}*/* {{ self.install_path }}/
     chmod -R 777 {{ self.install_path }}
-    cp /opt/{{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.txt /opt/{{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m
+    cp {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.txt {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m
     # Test
     {{ self.install_path }}/spm12 function exit
