--- a/.codespellrc
+++ b/.codespellrc
@@ -1,4 +1,4 @@
 [codespell]
-skip = .git,*.pdf,*.svg,versioneer.py
-#
-# ignore-words-list =
+skip = .git,*.pdf,*.svg,versioneer.py,_version.py
+# didi -- some name Dear to someone
+ignore-words-list = didi
