--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,16 +8,22 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+
 -   repo: https://github.com/psf/black
     rev: "23.1.0"
     hooks:
     -   id: black
 
+-   repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+    -   id: isort
+        args: [--profile, black]
+
 -   repo: https://github.com/pycqa/flake8
     rev: "6.0.0"
     hooks:
         - id: flake8
-
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v0.991"
