--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -10,6 +10,7 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.11', '3.10', '3.9', '3.8']
+      fail-fast: false
     steps:
       - name: Install Apptainer
         env:
