--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -29,7 +29,7 @@ jobs:
         run: black --check neurodocker
 
       - name: Run isort
-        run: isort --diff --check .
+        run: isort --diff --check --settings-path pyproject.toml .
 
   typecheck:
 
