--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -14,6 +14,10 @@ concurrency:
 on:
   push:
     branches: [ "master" ]
+    paths:
+      - .github/workflows/bootstrap.yml
+      - .github/workflows/create_workflows.py
+      - neurodocker/**
 
 # Uses the cron schedule for github actions
 #
