--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,10 @@ help:
 
 .PHONY: help Makefile
 
+cli:
+	bash generate_cli_help.sh
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile
+%: Makefile cli
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
