--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -7,6 +7,8 @@ concurrency:
 on:
     push:
         branches: [ "master" ]
+    pull_request:
+        branches: [ "master" ]
 
     schedule:
         - cron: 0 0 1 * *
