--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -23,6 +23,9 @@ jobs:
         steps:
         - uses: actions/checkout@v3
 
+        - name: Install neurodocker
+          run: python -m pip install --editable .
+
         - name: test common uses
           run: bash < docs/common_uses/conda_multiple_env.txt
 
