--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -23,6 +23,11 @@ jobs:
         steps:
         - uses: actions/checkout@v3
 
+        - name: Set up Python
+          uses: actions/setup-python@v4
+          with:
+            python-version: '3.11'
+
         - name: Install neurodocker
           run: python -m pip install --editable .
 
