--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -38,6 +38,12 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      software_name:
+        description: 'software to test'
+        required: true
+        default: 'all'
+
 permissions:
   contents: write
   actions: write
@@ -57,6 +63,10 @@ jobs:
 
       - name: Install dependencies
         run: python -m pip install jinja2 pyyaml
+
+      - name: check workflow inputs
+        run: |
+          echo "software_name: ${{ inputs.software_name }}"
 
       - name: Create workflows
         run: |
