--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Create workflows
         run: |
           git checkout -b test_docker_build
-          python .github/workflows/create_workflows.py
+          python .github/workflows/create_workflows.py ${software_name}
           ls -l .github/workflows
           git add .
           git config --global user.email "no-reply@repronim.org"
