--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -52,19 +52,6 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: check workflow inputs
-        run: |
-          software_name=${{ inputs.software_name }}
-          if [ -z "$software_name" ]; then
-            software_name="all"
-          fi
-          if [ "$software_name" = "all" ]; then
-            echo "testing all software"
-          else
-            echo "testing ${software_name}"
-          fi
-          export SOFTWARE_NAME=${software_name}
-
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.CI_FLOW }}
@@ -79,8 +66,17 @@ jobs:
 
       - name: Create workflows
         run: |
+          software_name=${{ inputs.software_name }}
+          if [ -z "$software_name" ]; then
+            software_name="all"
+          fi
+          if [ "$software_name" = "all" ]; then
+            echo "testing all software"
+          else
+            echo "testing ${software_name}"
+          fi
           git checkout -b test_docker_build
-          python .github/workflows/create_workflows.py ${SOFTWARE_NAME}
+          python .github/workflows/create_workflows.py --software_name ${software_name}
           ls -l .github/workflows
           git add .
           git config --global user.email "no-reply@repronim.org"
