--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install neurodocker
-        run: python -m pip install --editable .[docs]
+        run: python -m pip install --editable .[all]
       - name: build docs
         run: |
           make -C docs cli
