--- a/neurodocker/templates/freesurfer.yaml
+++ b/neurodocker/templates/freesurfer.yaml
@@ -1,6 +1,7 @@
 # Instructions to install FreeSurfer.
 
 name: freesurfer
+url: https://surfer.nmr.mgh.harvard.edu/
 binaries:
   arguments:
     required:
