--- a/neurodocker/templates/fsl.yaml
+++ b/neurodocker/templates/fsl.yaml
@@ -5,11 +5,11 @@
 # the relevant license.
 # *****************************************************************************
 #
-# Website: https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/
 # License: https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/Licence
 # Available Versions: https://fsl.fmrib.ox.ac.uk/fsldownloads/manifest.json
 
 name: fsl
+url: https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/
 alert: FSL is non-free. If you are considering commercial use of FSL, please consult the relevant license(s).
 binaries:
   arguments:
