--- a/docs/Makefile
+++ b/docs/Makefile
@@ -17,7 +17,10 @@ help:
 cli:
 	bash generate_cli_help.sh
 
+list:
+	python list_softwares.py
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile cli
+%: Makefile cli list
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
