only install node / npm if not present

--- a/neurodocker/templates/bids_validator.yaml
+++ b/neurodocker/templates/bids_validator.yaml
@@ -21,16 +21,22 @@ binaries:
     - curl
   # see install for node https://github.com/nodesource/distributions#installation-scripts
   instructions: |
-    {{ self.install_dependencies() }}
-    {%- if self.pkg_manager == "apt" %}
-      curl -SLO https://deb.nodesource.com/nsolid_setup_deb.sh
-      chmod 500 nsolid_setup_deb.sh
-      ./nsolid_setup_deb.sh {{ self.node_version }}
-      {{ self.install(["nodejs"]) }}
-    {% elif self.pkg_manager == "yum" %}
-      curl -SLO https://rpm.nodesource.com/nsolid_setup_rpm.sh
-      chmod 500 nsolid_setup_rpm.sh
-      ./nsolid_setup_rpm.sh {{ self.node_version }}
-      {{ self.install(["nodejs --setopt=nodesource-nodejs.module_hotfixes=1"]) }}
-    {% endif -%}
+    if [ ! -z `which npm` ] ; then \
+      echo "npm is installed, skipping its install." ; \
+    else \
+      {{ self.install_dependencies() }}
+      {%- if self.pkg_manager == "apt" %}
+        curl -SLO https://deb.nodesource.com/nsolid_setup_deb.sh
+        chmod 500 nsolid_setup_deb.sh
+        ./nsolid_setup_deb.sh {{ self.node_version }}
+        {{ self.install(["nodejs"]) }} ; \
+      {% elif self.pkg_manager == "yum" %}
+        curl -SLO https://rpm.nodesource.com/nsolid_setup_rpm.sh
+        chmod 500 nsolid_setup_rpm.sh
+        ./nsolid_setup_rpm.sh {{ self.node_version }}
+        {{ self.install(["nodejs --setopt=nodesource-nodejs.module_hotfixes=1"]) }} ; \
+      {% endif -%}
+    fi
+    node --version
+    npm --version
     npm install -g bids-validator@{{ self.version }}
