add url bids validator

--- a/neurodocker/templates/bids_validator.yaml
+++ b/neurodocker/templates/bids_validator.yaml
@@ -1,4 +1,5 @@
 name: bids_validator
+url: https://github.com/bids-standard/bids-validator
 binaries:
   urls:
     "1.13.0": "https://github.com/bids-standard/bids-validator/releases/tag/v1.13.0"
