afni: demand libjpeg-dev and not specific turbo or lib version (will be pulled by -dev AFAIK)

--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -25,12 +25,11 @@ binaries:
     - gsl-bin
     - libcurl4-openssl-dev
     - libgl1-mesa-dri
-    - libjpeg-turbo8-dev
+    - libjpeg-dev
     - libglu1-mesa-dev
     - libglib2.0-0
     - libglw1-mesa
     - libgomp1
-    - libjpeg62
     - libssl-dev
     - libudunits2-dev
     - libxm4
